--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -176,6 +176,7 @@ body {
   width: 100%;
   height: 5rem;
   background-color: var(--maincolorbold);
+  margin-top: auto;
 }
 
 /* hover button setting */
