--- a/asset/style/style-profile.css
+++ b/asset/style/style-profile.css
@@ -7,9 +7,7 @@
   display: flex;
   height: calc(100vh - 5rem);
 }
-h1 {
-  color: var(--maincolorbold);
-}
+
 .menu {
   width: 10vw;
   border-right: 1px solid var(--main-colorbold);
@@ -58,7 +56,6 @@ p {
   font-style: var(--maincolorbold);
   font-weight: bolder;
 }
-
 .describe {
   background-color: #eee;
   height: 80px;
@@ -74,21 +71,9 @@ p {
   justify-content: center;
   margin-bottom: 1rem;
 }
-
-.other-option-button {
-  width: 200px;
-  height: 50px;
-  border-radius: 12px;
-  border: none;
-  background-color: var(--maincolorlight);
-  color: #063526;
-  font-weight: bold;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
 .other-option-button:hover {
   background-color: #92c4ae;
+  transition: 0.3s;
 }
 
 .section {
@@ -110,16 +95,14 @@ p {
   padding: 10px;
 }
 #settingsBtn:hover {
+  transition: 0.3;
   border-radius: 50%;
-  border: 1px solid green;
   padding: 10px;
 }
 #settingsMenu {
   position: absolute;
   bottom: 60px;
   left: 150px;
-  background-color: white;
-  border: 1px solid green;
   border-radius: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   padding: 10px;
@@ -139,6 +122,7 @@ p {
 }
 
 #settingsMenu li:hover {
+  transition: 0.3;
   background-color: #f0f0f0;
 }
 
