--- a/asset/style/style-profile.css
+++ b/asset/style/style-profile.css
@@ -24,7 +24,7 @@ p {
   padding: 2rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .personal-infor {
