cập nhật code của Dang

--- a/asset/style/style-profile.css
+++ b/asset/style/style-profile.css
@@ -3,6 +3,22 @@
   height: 100vh;
   background-color: #ffffff;
 }
+
+:root {
+  --main-color: #063526;
+  --accent-color: #a9dcc9;
+  --bg-color: #f4f4f4;
+  --text-color: #333;
+  --font: "Montserrat Alternates", sans-serif;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: var(--font);
+  margin: 0;
+  padding: 0;
+}
+
 .main-profile {
   display: flex;
   height: calc(100vh - 5rem);
@@ -10,15 +26,13 @@
 
 .menu {
   width: 10vw;
-  border-right: 1px solid var(--main-colorbold);
+  border-right: 1px solid var(--main-color);
   display: flex;
   justify-content: center;
   align-items: flex-end;
   padding-bottom: 1rem;
 }
-p {
-  font-weight: bold;
-}
+
 .content-profile {
   flex: 1;
   padding: 2rem;
@@ -43,7 +57,8 @@ p {
   width: 200px;
   height: 200px;
   border-radius: 50%;
-  overflow: hidden; /* Giúp ảnh bo tròn không bị tràn ra ngoài */
+  background-color: beige;
+  /* overflow: hidden; Giúp ảnh bo tròn không bị tràn ra ngoài */
   margin-bottom: 1rem;
   border: 2px solid #ccc;
 }
@@ -67,7 +82,7 @@ p {
 .infor h1 {
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
-  font-style: var(--maincolorbold);
+  font-style: var(--main-color);
   font-weight: bolder;
 }
 .describe {
@@ -77,6 +92,18 @@ p {
   margin-top: 0.5rem;
   padding: 0.5rem;
   border-radius: 10px;
+}
+
+.other-option-button {
+  width: 200px;
+  height: 50px;
+  border-radius: 12px;
+  border: none;
+  background-color: var(--accent-color);
+  color: #063526;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s;
 }
 
 .other-option {
@@ -92,7 +119,7 @@ p {
 
 .section {
   background-color: #f9f9f9;
-  border-left: 4px solid var(--maincolorbold);
+  border-left: 4px solid var(--main-color);
   padding: 1rem;
   margin-bottom: 1rem;
 }
@@ -109,14 +136,16 @@ p {
   padding: 10px;
 }
 #settingsBtn:hover {
-  transition: 0.3;
   border-radius: 50%;
+  border: 1px solid green;
   padding: 10px;
 }
 #settingsMenu {
   position: absolute;
   bottom: 60px;
   left: 150px;
+  background-color: white;
+  border: 1px solid green;
   border-radius: 10px;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   padding: 10px;
