--- a/asset/style/style.css
+++ b/asset/style/style.css
@@ -15,14 +15,6 @@
   margin: 0;
   padding: 0;
 }
-
-/* body {
-  max-width: 100vw;
-  height: auto;
-  min-height: 100dvh;
-  margin: 0 auto;
-} */
-
 body {
   display: grid;
   max-width: 100vw;
@@ -131,7 +123,9 @@ body {
   align-items: center;
   justify-content: center;
 }
-
+.auth-buttons a {
+  font-family: var(--fontfamily);
+}
 .navbar-button:hover {
   border-color: var(--loginText);
   background-color: rgba(255, 255, 255, 0.08); /* nhẹ nhàng */
@@ -389,7 +383,6 @@ body {
   transform: translateX(-50%);
   border-radius: 5px;
 }
-
 .success {
   visibility: hidden;
   min-width: 250px;
@@ -404,8 +397,11 @@ body {
   border-radius: 5px;
   border: 1px solid rgb(2, 145, 206);
 }
-
 .show {
   visibility: visible;
   animation: fadeOut 3s ease-in-out;
+}
+.recent-header p,
+#recentList li {
+  font-family: var(--fontfamily);
 }
